fix(radio): adjust alignment

--- a/packages/components/src/components/form/bal-field/bal-field.scss
+++ b/packages/components/src/components/form/bal-field/bal-field.scss
@@ -89,10 +89,6 @@ bal-field {
     & > bal-checkbox {
       margin-top: 7px;
     }
-
-    & > bal-radio-group {
-      margin-top: 10px;
-    }
   }
 
   .control.has-icons-left *::part(input) {
