--- a/packages/components/src/components/form/bal-radio/bal-radio-group/bal-radio-group.scss
+++ b/packages/components/src/components/form/bal-radio/bal-radio-group/bal-radio-group.scss
@@ -40,11 +40,6 @@ bal-radio-group {
       & > div {
         bal-radio {
           display: block;
-          margin-bottom: 8px;
-
-          &:last-child {
-            margin-bottom: 4px;
-          }
         }
       }
     }
