--- a/packages/components/src/components/form/bal-radio/bal-radio.scss
+++ b/packages/components/src/components/form/bal-radio/bal-radio.scss
@@ -18,7 +18,7 @@ bal-radio {
   }
 
   &.bal-radio {
-    min-height: 24px;
+    min-height: 36px;
     min-width: 24px;
     display: inline-block;
     position: relative;
@@ -46,7 +46,7 @@ bal-radio {
       justify-content: flex-start;
       text-align: left;
 
-      min-height: 26px;
+      min-height: 36px;
       cursor: pointer;
       -webkit-user-select: none;
       -moz-user-select: none;
@@ -61,7 +61,7 @@ bal-radio {
       display: inline-block;
       position: absolute;
       left: 0;
-      top: 0;
+      top: 6px;
       height: 24px;
       width: 24px;
       border-radius: 50%;
@@ -77,7 +77,7 @@ bal-radio {
       content: none;
       background: $blue;
       transform: scale(0.4);
-      top: 0;
+      top: 6px;
       left: 0;
     }
 
